--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
     <header>
         <img src="logotipo.jpg" alt="Logotipo da clínica">
         <h1>Titanium Medical</h1>
-        <p>Clínica de Emagrecimento - Dra. Lauana Araújo</p>
+        <p>Clínica de Emagrecimento - Enf. Lauana Araújo</p>
     </header>
 
     <section>
         <h2>Transforme sua vida com resultados comprovados!</h2>
-        <p>Consultas a partir de <strong>R$ 99,99</strong> com protocolos exclusivos e acompanhamento personalizado.</p>
+        <p>Consultas incial a partir de <strong>R$ 99,99</strong> por 1 hora de atendimento on-line com protocolos exclusivos e acompanhamento personalizado.</p>
         
         <!-- Cards dos serviços -->
         <div class="servicos">
             <div class="card">
-                <h3>Protocolos de Emagrecimento</h3>
-                <p>Consultas médicas, acompanhamento personalizado e técnicas modernas para garantir o emagrecimento.</p>
-                <a class="btn-wpp" href="https://wa.me/5592982499511" target="_blank">Agendar no WhatsApp</a>
+                <h3>Consulta via MeetGoogle</h3>
+                <p>Consultas médicas para definir qual melhor caminho e plano se adequa a você, onde poderá tirar dúvidas no que tange ao tratamento</p>
+                <a class="btn-wpp" href="https://calendar.app.google/F5JzGoYRhbhg4y9G8" target="_blank">Agendar já</a>
             </div>
             <div class="card">
-                <h3>Protocolos Injetáveis</h3>
+                <h3>Acompanhamento personalizado</h3>
                 <p>Medicação injetável com resultados rápidos e comprovados para perda de peso eficaz.</p>
                 <a class="btn-wpp" href="https://wa.me/5592982499511" target="_blank">Agendar no WhatsApp</a>
             </div>
