--- a/index.html
+++ b/index.html
@@ -99,24 +99,16 @@
         <div class="servicos">
             <div class="card">
                 <h3>Consulta via MeetGoogle</h3>
-                <p>Consultas médicas para definir qual melhor caminho e plano se adequa a você, onde poderá tirar dúvidas no que tange ao tratamento</p>
+                <p>Consultas médicas por 99.99 R$ para definir qual melhor caminho e plano se adequa a você, onde poderá tirar dúvidas no que tange ao tratamento</p>
                 <a class="btn-wpp" href="https://calendar.app.google/F5JzGoYRhbhg4y9G8" target="_blank">Agendar já</a>
             </div>
             <div class="card">
-                <h3>Acompanhamento personalizado</h3>
-                <p>Medicação injetável com resultados rápidos e comprovados para perda de peso eficaz.</p>
+                <h3>Acompanhamento Personalizado</h3>
+                <p>Consulta médica presencial por 199.99 R$ para examinar o paciente e definir com maior precisão qual o melhor tratamento que deverá seguir de maneira mais personalizada.</p>
                 <a class="btn-wpp" href="https://wa.me/5592982499511" target="_blank">Agendar no WhatsApp</a>
             </div>
-            <div class="card">
-                <h3>Protocolos de Hipertrofia</h3>
-                <p>Acompanhamento com bioimpedância, doses de bioativos e suplementação sob prescrição médica.</p>
-                <a class="btn-wpp" href="https://wa.me/5592982499511" target="_blank">Agendar no WhatsApp</a>
-            </div>
-            <div class="card">
-                <h3>Protocolos de Vitaminas</h3>
-                <p>Reforço energético, fortalecimento imunológico e suporte para o seu bem-estar.</p>
-                <a class="btn-wpp" href="https://wa.me/5592982499511" target="_blank">Agendar no WhatsApp</a>
-            </div>
+
+            
         </div>
 
         <!-- Seção de Planos com Abas -->
