--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
         <h1>Titanium Medical</h1>
         <p>Clínica de Emagrecimento - Enf. Lauana Araújo</p>
     </header>
+    <body class="text-gray-800" 
+      style="background-image: url('lauana1.jpg'); 
+             background-size: cover; 
+             background-position: center; 
+             background-attachment: fixed;">
 
     <section>
         <h2>Transforme sua vida com resultados comprovados!</h2>
